ctfd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd
  template:
    metadata:
      labels:
        app: ctfd
    spec:
      containers:
      - name: ctfd
        image: ctfd/ctfd:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ctfd
spec:
  selector:
    app: ctfd
  ports:
  - port: 8000
    targetPort: 8000
