ctfd-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-redis
  template:
    metadata:
      labels:
        app: ctfd-redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: ctfd-redis
spec:
  selector:
    app: ctfd-redis
  ports:
  - port: 6379
